Prerequisite format changes !